@@ -28,17 +28,10 @@ import java.util.List;
 
 import org.apache.geode.distributed.internal.deadlock.UnsafeThreadLocal;
 import org.apache.geode.internal.offheap.AddressableMemoryManager;
-import org.apache.geode.internal.stats50.VMStats50;
 import org.apache.geode.unsafe.internal.com.sun.jmx.remote.security.MBeanServerAccessController;
-import org.apache.geode.unsafe.internal.sun.nio.ch.DirectBuffer;
 
 public class MemberJvmOptions {
   static final int CMS_INITIAL_OCCUPANCY_FRACTION = 60;
-  /**
-   * export needed by {@link DirectBuffer}
-   */
-  private static final String SUN_NIO_CH_EXPORT =
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED";
   /**
    * export needed by {@link MBeanServerAccessController}
    */
@@ -52,16 +45,9 @@ public class MemberJvmOptions {
    * open needed by {@link AddressableMemoryManager}
    */
   private static final String JAVA_NIO_OPEN = "--add-opens=java.base/java.nio=ALL-UNNAMED";
-  /**
-   * open needed by {@link VMStats50}
-   */
-  private static final String COM_SUN_MANAGEMENT_INTERNAL_OPEN =
-      "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED";
 
   static final List<String> JAVA_11_OPTIONS = Arrays.asList(
       COM_SUN_JMX_REMOTE_SECURITY_EXPORT,
-      SUN_NIO_CH_EXPORT,
-      COM_SUN_MANAGEMENT_INTERNAL_OPEN,
       JAVA_LANG_OPEN,
       JAVA_NIO_OPEN);
 
